--- a/_posts/2020-02-29-ShellpwnCTF-2020.md
+++ b/_posts/2020-02-29-ShellpwnCTF-2020.md
@@ -12,7 +12,7 @@ So we are given a file which is a 7z archive so we extract it and as the challen
 ![](img/shellpwn/1.png)
 
 the flag is:-
-```shellctf{l00k_d3ep_1n_b1n@rY}```
+```shellctf{l00k_d3ep_1n_b1n@rY} ```
 
 
 ### Challenge-Find me!,200
@@ -23,12 +23,11 @@ The xml file give is a kml file which is used to save the google earth configura
 the flag was right there but there was confusion in chars so i faced a lot of time trying out the combinations 
 
 finally the flag was
-```shellctf{2E501L}```
+```shellctf{2E501L} ```
 
 ## Scripting
 
 ### Zipppppy,200
-
 we are given with a file which is to extracted multiple times but the catch here is that everytime the file type is not same its different so we need to write a script to unzip it 
 I wrote a bash script as its short and easy
 ```bash
@@ -71,7 +70,7 @@ and the run it like
 while true;do ./unpack.sh flag;done
 ```
 SO the flag is 
-```shellctf{$cr1ptiNg_I$_fUn}```
+```shellctf{$cr1ptiNg_I$_fUn} ```
 
 ### Fasst,250
 
@@ -100,7 +99,7 @@ while(1):
 ```
 
 and we get the flag which is 
-```shellctf{y0u_c@Ught_m3}```
+```shellctf{y0u_c@Ught_m3} ```
 
 
 ### Can you Escape me!,350
@@ -115,7 +114,7 @@ so the final payload was
 ![](img/shellpwn/3.png)
 
 the flag is 
-```shellctf{b@$h_1s_$0_much_fUn}```
+```shellctf{b@$h_1s_$0_much_fUn} ```
 
 ##### Thanks @RudraPratap for the help
 
@@ -140,7 +139,7 @@ print(base_64)
 ```
 
 the flag is 
-```shellpwn{enc0ding_i$_n0t_encrYpt1ng}```
+```shellpwn{enc0ding_i$_n0t_encrYpt1ng} ```
 
 
 ### Seive ,150
@@ -151,4 +150,4 @@ the link to the repo is <https://github.com/Masrt200/WoC2k19>Plz do check it out
 ![](img/shellpwn/4.png)
 
 The flag is 
-```message: shellctf{k3y_s1ze_m@tter$}```
+```shellctf{k3y_s1ze_m@tter$} ```
